{{$NEXT}}

0.09     2011-09-05

- Fix is_class_loaded to ignore $ISA (but still look for @ISA) when trying to
  determine whether a class is loaded. ( Jesse Luehrs )

- Lots of internals cleanup. ( Jesse Luehrs )

0.08     2011-08-15

- The previous version was missing a prereq declaration for
  Data::OptList. Reported by Daisuke Maki and Mark Hedges. RT #70285.

0.07     2011-08-15

- All this module's subroutines now accept optional parameters for a module so
  you can write something like - load_class( 'Foo', { -version => 42 } )

- There is now a Class::Load::XS distro available on CPAN which implements
  some of this module's code in XS for speed. This code was originally written
  by Goro Fuji and Florian Ragwitz for Class::MOP. You need to install this
  distro explicitly if you want the XS implementation.

- Added a load_first_existing_class subroutine based, mostly borrowed from
  Class::MOP.

- Fixed a bug where a package with a version object in its $VERSION would not
  be seen as loaded. Reported by Chris Prather.

0.06     2010-11-15

- BACK COMPAT CHANGE: Remove $Class::Load::ERROR in favor of a contextual
  return value. ( Jesse Luehrs )

- Add load_optional_class($class) that fails only if there is a problem with
  the attempted-to-load $class. ( Kent Fredric )

- Force internal require to try-again if we are SURE the class is not
  there. This produces reliable errors. ( Kent Fredric )

- Replace Test::Exception with Test::Fatal ( Kent Fredric )

0.05     2009-09-02

- Cargo-cult Class::MOP's is_class_loaded so we work on 5.10

0.04     2008-11-09

- No changes

0.03     2008-11-09

- Dist fix

0.02     2008-11-09

- Declare dependency on Test::Exception

0.01     2008-08-13

- First version, released on an unsuspecting world.
