@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Make sure the $@ localization doesn't hide errors - invalid module name
+  errors were being suppressed on perls before 5.14. ( Jesse Luehrs )
+
 0.09     2011-09-05
 
 - Fix is_class_loaded to ignore $ISA (but still look for @ISA) when trying to
